--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
       3000
     ],
     "otherPortsAttributes": { "onAutoForward" : "ignore" },
-    "postCreateCommand": "sudo apt-get update && sudo apt-get install libpq-dev imagemagick -y && cat docker/development/hosts | sudo tee -a /etc/hosts  && mkdir -p .docker/elasticsearch/config && cp docker/development/docker-compose.yml .docker && cp setup/elasticsearch.yml .docker/elasticsearch/config && cp setup/log4j2.properties .docker/elasticsearch/config  && cd .docker  && docker-compose up -d"
+    "postCreateCommand": "sudo apt-get update && sudo apt-get install libpq-dev imagemagick -y && cat docker/development/hosts | sudo tee -a /etc/hosts  && mkdir -p .docker/elasticsearch/config && cp docker/development/docker-compose.yml .docker && cp setup/elasticsearch.yml .docker/elasticsearch/config && cp setup/log4j2.properties .docker/elasticsearch/config  && cd .docker  && docker-compose up -d && nvm use && gem install bundler && bundle install && yarn install && cp config/database.yml.default config/database.yml && cp env.example .env && rails db:schema:load && ADMIN_EMAIL='Admin@default.com' ADMIN_PASSWORD='ThisIsTh34DmiNPaSSwRD4..1.1.1' rails db:seed && rails fablab:es:build_stats && overcommit --install && mkdir -p tmp/pids && foreman s -p 5000"
 
   }
 
