--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,23 @@
 {
-    "image": "ghcr.io/rails/devcontainer/images/ruby:3.2.2",
-    "features": {
-      "ghcr.io/devcontainers/features/docker-in-docker:2": {},
-      "ghcr.io/rails/devcontainer/features/activestorage": {}
-    },
-    "forwardPorts": [
-      3000
-    ],
-    "otherPortsAttributes": { "onAutoForward" : "ignore" },
-    "postCreateCommand": "sudo apt-get update && sudo apt-get install libpq-dev imagemagick -y && cat docker/development/hosts | sudo tee -a /etc/hosts  && mkdir -p .docker/elasticsearch/config && cp docker/development/docker-compose.yml .docker && cp setup/elasticsearch.yml .docker/elasticsearch/config && cp setup/log4j2.properties .docker/elasticsearch/config  && cd .docker  && docker-compose up -d && nvm use && gem install bundler && bundle install && yarn install && cp config/database.yml.default config/database.yml && cp env.example .env && rails db:schema:load && ADMIN_EMAIL='Admin@default.com' ADMIN_PASSWORD='ThisIsTh34DmiNPaSSwRD4..1.1.1' rails db:seed && rails fablab:es:build_stats && overcommit --install && mkdir -p tmp/pids && foreman s -p 5000"
-
-  }
-
- 
+  "image": "ghcr.io/rails/devcontainer/images/ruby:3.2.2",
+  "features": {
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+    "ghcr.io/rails/devcontainer/features/activestorage": {},
+    "ghcr.io/devcontainers/features/node:1": {
+      "version": "18.15.0",
+      "nodeGypDependencies": true,
+      "nvmInstallPath": "/usr/local/share/nvm",
+      "pnpmVersion": "latest",
+      "nvmVersion": "latest",
+      "installYarnUsingApt": true
+    }
+  },
+  "forwardPorts": [
+    3000,
+    5000
+  ],
+  "otherPortsAttributes": {
+    "onAutoForward": "ignore"
+  },
+  "postCreateCommand": "sudo apt-get update && sudo apt-get install libpq-dev imagemagick -y && cat docker/development/hosts | sudo tee -a /etc/hosts  && mkdir -p .docker/elasticsearch/config && cp docker/development/docker-compose.yml .docker && cp setup/elasticsearch.yml .docker/elasticsearch/config && cp setup/log4j2.properties .docker/elasticsearch/config  && cd .docker  && docker-compose up -d && nvm use && gem install bundler && bundle install && yarn install && cp config/database.yml.default config/database.yml && cp env.example .env && rails db:schema:load && ADMIN_EMAIL='Admin@default.com' ADMIN_PASSWORD='ThisIsTh34DmiNPaSSwRD4..1.1.1' rails db:seed && rails fablab:es:build_stats && overcommit --install && mkdir -p tmp/pids && foreman s -p 5000"
+}
